# sain

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  README.md  SECURITY.md  dev-requirements.txt  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  features_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.html  sain.html  search.js
docs/sain/: boxed.html  cell.html  cfg.html  collections.html  convert.html  default.html  drop.html  error.html  futures.html  iter.html  macros.html  maybe_uninit.html  once.html  option.html  ref.html  result.html  sync.html  time.html  vec.html
docs/sain/collections/: buf.html  hash_map.html  slice.html  vec.html
examples/: defaults.py  drops.py  iters.py  options.py  overview.py
examples/error_handling/: README.md  __init__.py
examples/iterator/: README.md  iters.py
examples/traits/: README.md  __init__.py
sain/: __init__.py  __init__.pyi  __main__.py  _misc.py  _sain.py  analyze.py  boxed.py  cell.py  cfg.py  cfg.pyi  deafult.py  default.py  drop.py  error.py  futures.py  iter.py  macros.py  maybe_uninit.py  maybe_uninit.pyi  once.py  option.py  option.pyi  prelude.py  ref.py  result.py  result.pyi  time.py  vec.py
sain/async_iter/: __init__.py
sain/cell/: __init__.py  lazy.py  once.py  ref.py
sain/collections/: __init__.py  buf.py  hash_map.py  slice.py  vec.py
sain/collections/hash_map/: __init__.py  base_iter.py
sain/convert/: __init__.py
sain/dyn/: __init__.py  buf.py  string.py  vec.py
sain/iter/: __init__.py
sain/primitive/: __init__.py
sain/sync/: __init__.py  lazy.py  once.py
templates/: custom.css
tests/: __init__.py
tests/sain/: test_boxed.py  test_buf.py  test_cfg.py  test_default.py  test_drop.py  test_iter.py  test_maybe_uninit.py  test_option.py  test_ref.py  test_result.py  test_vec.py
tests/sain/collections/: test_buf.py  test_slice.py  test_vec.py
tests/sain/collections/hash_map/: test_hash_map.py
tests/sain/iter/: test_async_iter.py  test_iter.py
